Fixed gap in hover state in Narrow template, isolated default Item.Listing styles, moved template styles from module.css to template.css
git-tfs-work-item:1236 associate
git-tfs-work-item:1276 associate
git-tfs-id: [http://tfs.etg-inc.net:8080/tfs/Engage%20TFS%202010]$/Engage Events;C2178

--- a/Module.css
+++ b/Module.css
@@ -20,9 +20,6 @@
 			.ResponseRow .EventStats > a {padding-right: 50%;}
 .ResponsesSummary {padding: 25px 0;}
 .PagingTable { margin: 10px 0; }
-
-		.EventItem{border-bottom: 1px #ccc dotted; overflow: hidden; padding: 10px 0; width: 100%;}
-			.EventItem p{margin-top: 0; margin-bottom: 6px;}
 		
 		.EventButtons{margin-top: 10px; overflow:hidden; padding-left: 18%; clear: both;}
 		.EventStats{font-weight:bold;}	
