--- a/Templates/Template.css
+++ b/Templates/Template.css
@@ -16,37 +16,35 @@
 
 
 /*==================== Item.Listing ==================== */
+	.ItemListing{border-bottom: 1px #ccc dotted; overflow: hidden; padding: 10px 0; width: 100%;}
+		.ItemListing p{margin-top: 0; margin-bottom: 6px;}
 
-	.EventTitle{overflow: hidden;}
-		.EventTitle h3.SubHead{font-size: 120%; padding: 0 0 5px 18%; margin: 0;}
-		.EventTitle h2.Head {padding: 0 0 5px 18%; margin: 0;}
+	.ItemListing .EventTitle{overflow: hidden;}
+		.ItemListing .EventTitle h3.SubHead{font-size: 120%; padding: 0 0 5px 18%; margin: 0;}
+		.ItemListing .EventTitle h2.Head {padding: 0 0 5px 18%; margin: 0;}
 	
-	.EventLocation{overflow: hidden;}
-		.EventLocation .NormalBold {float:left; width: 15%; text-align: right;}
-		.EventLocation .Normal{float:right; width: 82%; text-align: left;}
-
+	.ItemListing .EventLocation{overflow: hidden;}
+		.ItemListing .EventLocation .NormalBold {float:left; width: 15%; text-align: right;}
+		.ItemListing .EventLocation .Normal{float:right; width: 82%; text-align: left;}
 	
-	.EventDate{overflow: hidden;}
-		.EventDate .NormalBold {float:left; width: 15%; text-align: right;}
-		.EventDate .Normal{float:right; width: 82%; text-align: left;}
-		.RecurrenceSummary .NormalBold {float: none; width: auto; text-align: left;}
+	.ItemListing .EventDate{overflow: hidden;}
+		.ItemListing .EventDate .NormalBold {float:left; width: 15%; text-align: right;}
+		.ItemListing .EventDate .Normal{float:right; width: 82%; text-align: left;}
+		.ItemListing .RecurrenceSummary .NormalBold {float: none; width: auto; text-align: left;}
 		
-	.EventOverview{overflow: hidden;}
-		.EventOverview .NormalBold {float:left; width: 15%; text-align: right;}
-		.EventOverview .Normal{float:right; width: 82%; text-align: left;}
+	.ItemListing .EventOverview{overflow: hidden;}
+		.ItemListing .EventOverview .NormalBold {float:left; width: 15%; text-align: right;}
+		.ItemListing .EventOverview .Normal{float:right; width: 82%; text-align: left;}
 
-
-	.EventDescription{overflow: hidden; clear: both;}
-		.EventDescription .NormalBold {float:left; width: 15%; text-align: right;}
-		.EventDescription .Normal{float:right; width: 82%; text-align: left;}
-			.EventDescription .Normal > p {margin-top: 0;}
-
-
+	.ItemListing .EventDescription{overflow: hidden; clear: both;}
+		.ItemListing .EventDescription .NormalBold {float:left; width: 15%; text-align: right;}
+		.ItemListing .EventDescription .Normal{float:right; width: 82%; text-align: left;}
+			.ItemListing .EventDescription .Normal > p {margin-top: 0;}
 	
-	.eventButtons{padding-left: 18%;}
-		.eventButtons input {margin-bottom: 0.675em;}
+	.ItemListing .eventButtons{padding-left: 18%;}
+		.ItemListing .eventButtons input {margin-bottom: 0.675em;}
 		
-	.RecurringEventItem{background: transparent url(../images/recurring_icon.gif) no-repeat 0 16px;}
+	.ItemListing .RecurringEventItem{background: transparent url(../images/recurring_icon.gif) no-repeat 0 16px;}
 	
 	
 /*==================== Mini List Template ==================== */	
@@ -62,10 +60,9 @@
 	{padding: 5px; text-align: right;}
 	
 /*==================== Narrow List Stuff ==================== */	
-	
 	.Narrow
 	{overflow:hidden;border-color:#ccc;border-width:1px;border-style:dashed;}
-	.Narrow .EventItem {padding:5px;}
+	.Narrow .EventItem {border-bottom: 1px #ccc dotted; overflow: hidden; padding:5px; width: 100%;}
 	.Narrow .EventItem:hover {background:#eee;}
 	.Narrow .EventItem:hover a {color:#666; text-decoration:none;}
 	
@@ -83,7 +80,8 @@
 		.Narrow .EventDate .Normal{float:right; width: 60%; text-align: left;}
 		.Narrow .RecurrenceSummary .NormalBold {float: none; width: auto; text-align: left;}
 		
-	.Narrow .EventLink{display:block;padding:5px;margin:-5px;}
+	.Narrow .EventLink{display:block;padding:10px 0 10px 10px;margin:-10px 0 -10px -10px;}
+	.Narrow .EventItem p.Normal, .Narrow .EventItem h2.NormalBold {margin: 5px;}
 			
 	.Narrow .calendarLink
-	{padding: 5px; text-align: right; text-decoration:underline;}
+	{padding: 5px; text-align: right; }
